--- a/students/KulbedaKirill/task_2/src/package.json
+++ b/students/KulbedaKirill/task_2/src/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
     "@radix-ui/react-form": "^0.1.8",
@@ -25,14 +26,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "24.7.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
-    "tailwindcss": "^4"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
